Committed Google Docs as of 30 Aug 2010

--- a/code.tex
+++ b/code.tex
@@ -7,6 +7,7 @@
 \usepackage{fancyhdr}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{framed}
 \input{vc}
 
 \setcounter{secnumdepth}{7}
@@ -30,13 +31,13 @@
 			\large \includegraphics[width=5in]{2008_msa_color_logo} \\
 			Revision  \\
 			{\tt commit \GITAbrHash} \\
-			Ratified: 28 Mar 2010}
+			Adopted: }
 	\author{\line(1,0){175} \\
-			Michael L.~Benson \\
+			Elson Y.~Liu \\
 			Rules \& Elections Committee Chair
 				\and
 			\line(1,0){175} \\
-			James E.~Brusstar \\
+			Gabriel C.~Suprise \\
 			Student General Counsel}
 	\date{}
 	\maketitle
@@ -50,17 +51,17 @@
 	\thispagestyle{empty}
 	\linenumbers
 
-	\input{article1}
+	\input{general}
 	
-	\input{article2}
+	\input{legislative}
 	
-	\input{article3}
+	\input{executive}
 	
-	\input{article4}
+	\input{judicial}
 	
-	\input{article5}
+	\input{finance}
 	
-	\input{article6}
+	\input{elections}
 	
-	\input{article7}
+	\input{organizations}
 \end{document}
