--- a/general.tex
+++ b/general.tex
@@ -1,65 +1,56 @@
-\article{}
+\article{General Provisions}
 
 \section{Title.}
-This Compiled Code of the Michigan Student Assembly, enacted by MSA pursuant to Article II(K) of the All-Campus Constitution, contains all of the rules, regulations and procedures affecting MSA, its subsidiary entities, recognized student organizations, and the Central Student Judiciary.
+This Compiled Code of the Michigan Student Assembly, enacted pursuant to Article II, Section 2, of the Constitution of the Student Body of the Ann Arbor Campus of the University of Michigan, contains all regulations, excluding provisions of the Operating Procedures, currently and permanently affecting student government or the student body.
+
 
 \section{Definitions.}
 As referenced in this Compiled Code, the following terms shall have meaning as defined in this section.
 
 \subsection{}
-``All-Campus Constitution'' or ``Constitution'' shall mean the All-Campus Constitution ratified by the students of the University of Michigan.
+"Constitution" shall mean the Constitution of the Student Body of the Ann Arbor Campus of the University of Michigan.
 
 \subsection{}
-``Michigan Student Assembly'' or ``MSA'' or ``Assembly'' shall mean the central student government of the University of Michigan established by the Constitution.
+"Michigan Student Assembly" or "MSA" shall mean the central student government of the University of Michigan established by the Constitution.
 
 \subsection{}
-``University'' shall mean the University of Michigan.
+"University" shall mean the University of Michigan.
 
 \subsection{}
-``Campus'' shall mean the Ann Arbor campus of the University.
+"Campus" shall mean the Ann Arbor campus of the University.
 
 \subsection{}
-``Student organization'' shall mean a student organization explicitly recognized by MSA.
+"Student organization" shall mean a student organization explicitly recognized by MSA.
 
 \subsection{}
-``Central Student Judiciary'' or ``CSJ'' shall mean the student judicial body of the University established by the Constitution.
+"Assembly" shall mean the Student Assembly defined in Article II, Section 2 of the Constitution.
 
 \subsection{}
-``Compiled Code'' or ``Code'' shall mean this document.
+"Central Student Judiciary" or "CSJ" shall mean the student judicial body of the University established by the Constitution.
 
 \subsection{}
-``Student'' shall mean a person enrolled at the University, or a person enrolled in the University during the previous full term who is eligible to be enrolled in the subsequent full term.
+"Compiled Code" or "Code" shall mean this document.
+
+\subsection{}
+"Student" shall mean a person enrolled at the University, or a person enrolled in the University during the previous full term who is eligible to be enrolled in the subsequent full term.
+
 
 \section{Amendments to the Compiled Code.}
 
 \subsection{}
-Any amendment to the Code or ballot question to amend the All-Campus Constitution must be read twice by the Assembly. The amendment must have been discussed or originated in the Rules and Elections Committee prior to its introduction, or it shall be immediately committed to the Rules and Elections Committee with instructions to return within three weeks time with their recommendations for it. Amendments to the Code or ballot questions to amend the All-Campus Constitution may not be considered by the assembly until at least one week has elapsed since the time of introduction. 
+Any amendment to the Code must be read twice by the Assembly. The amendment must have been discussed or originated in the Rules and Elections Committee prior to its introduction, or it shall be immediately committed to the Rules and Elections Committee with instructions to return within three weeks time with their recommendations for it. Amendments to the Code or ballot questions to amend the Constitution may not be considered by the Assembly until at least one week has elapsed since the time of introduction.
 
 \subsection{}
-An amendment to the Code or ballot question to amend the All-Campus Constitution shall not be considered by the Assembly unless both the pre-amendment language and the proposed amended language have been made available to the Assembly in the same document.
+An amendment to the Code or ballot question to amend the Constitution shall not be considered by the Assembly unless both the pre-amendment language and the proposed amended language have been made available to the Assembly in the same document.
 
 \subsection{}
-An amendment to the Code or ballot question to amend the All-Campus Constitution shall not be considered by the Assembly if the amendment creates a conflict within the Code or a conflict between the Code and the Constitution.
+An amendment to the Code or ballot question to amend the Constitution shall not be considered by the Assembly if the amendment creates a conflict within the Code or a conflict between the Code and the Constitution.
 
 \subsection{}
-Amendments to the Code shall have immediate effect, but shall be ineffective if not recorded in the MSA minutes of the meeting at which they were enacted by the Assembly Amendments to the All-Campus Constitution, if adopted by the student body, shall be effective as provided for in the Constitution.
+Amendments to the Code shall have immediate effect, but shall be ineffective if not recorded in the MSA minutes of the meeting at which they were enacted by the Assembly. Amendments to the Constitution, if adopted by the student body, shall be effective as provided for in the Constitution.
 
 \subsection{}
-Amendments to the Code and resolutions to place Constitutional amendments on the ballot shall require a two-thirds vote to pass. 
-
-\section{Distribution of an authoritative and authentic MSA Compiled Code and All Campus Constitution.}  
-
-\subsection{}
-The Constitution and Code shall be posted on the MSA website and a printed copy shall be made available to any student upon request.
-
-\subsection{}
-Both the Constitution and the Code shall each have a title page that contains multiple elements, including: title of the document, MSA Logo, the statement ``Last updated on [insert date of last revision]'', and the signatures of the Student General Counsel and the Rules and Elections Committee Chair.
-
-\subsection{}
-The Student General Counsel shall deposit a copy of the updated Code and Constitution with the Bentley Historical Library following each election and prior to the seating of new representatives.
-
-\subsection{}
-The copies located at the Bentley Historical Library shall be considered the official versions of the Code and Constitution. Any changes to the Code in between deposits shall be considered in effect, but must be reflected in the next deposited copy of the Code.
+Amendments to the Code shall pass by the Assembly with a simple majority vote.
 
 
 \section{Conflict of Law.}
@@ -68,7 +59,7 @@ The copies located at the Bentley Historical Library shall be considered the off
 Any ambiguity between the Code and the Constitution shall be resolved to give full effect to the Constitution.  
 
 \subsection{}
-Any ambiguity between current or pending MSA legislation and the Code, or between Robert's Rules of Order and the Code, shall be resolved to give full effect to the Code.
+Any ambiguity between current or pending MSA legislation and the Code shall be resolved to give full effect to the Code.
 
-\subsection{}
-Unless otherwise authorized herein, the Code shall not be suspended by the Assembly.
+ 
+
