Updated President's duties

--- a/executive.tex
+++ b/executive.tex
@@ -3,7 +3,20 @@
 \section{The Executive Officers}
 
 \subsection{The President.}
-The President will preside at meetings of the Assembly, oversee and coordinate all MSA activities, and be the chief spokesperson for MSA unless otherwise specified in the Code or Constitution.  The President may appoint a chair to preside over any portion of an Assembly meeting.  The President must appoint a Treasurer, Student General Counsel, and Chief of Staff prior to the end of the Winter Semester \todo{[in which he/she was elected?]}.
+\subsubsection{Executive power vested in the President.}
+The President shall oversee and coordinate all MSA activities and be the chief spokesperson for MSA unless otherwise specified in the Code or Constitution.
+\subsubsection{Appointment powers.}
+	\subsubsubsection{Executive Committee.}
+    The President shall have the authority to appoint a Treasurer, Student General Counsel, Chief of Staff, and Chief Programming Officer to the Executive Committee, which shall advise the President on all pertinent matters. The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
+	\subsubsubsection{University-wide committees.}
+	The President shall also appoint student representatives to university-wide committees.
+	\subsubsubsection{Confirmation.}
+	All Executive appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.
+	\subsubsubsection{Recall.}
+	The President may likewise recall these officers with a two-thirds majority vote of the Assembly. 
+	
+\subsubsection{Executive Commissions}
+The President may appoint Executive Commissions to study issues on campus, publish reports concerning issues under such purview, and recommend to the Executive Branch such measures as they shall deem appropriate.
 
 \subsection{Vice President.}
 The Executive Vice President will chair the Assembly in the absence of the President, coordinate and supervise the general administrative staff of MSA, work with the Administrative Coordinator to assign MSA office space, preside at meetings of the Steering Committee, maintain a record of all activities of the Assembly, and prepare an MSA Mid-Year Report and MSA End-Year Report.
