Updated Vice President's duties

--- a/executive.tex
+++ b/executive.tex
@@ -29,7 +29,15 @@ The President shall, prior to the end of each academic year, submit to the Assem
 
 
 \subsection{Vice President.}
-The Executive Vice President will chair the Assembly in the absence of the President, coordinate and supervise the general administrative staff of MSA, work with the Administrative Coordinator to assign MSA office space, preside at meetings of the Steering Committee, maintain a record of all activities of the Assembly, and prepare an MSA Mid-Year Report and MSA End-Year Report.
+\subsubsection{Chairs the University Council.}
+The Vice President shall serve as president of the University Council, but shall have no vote, unless the Council shall be equally divided.
+
+\subsubsection{Non-voting Member of the Assembly.}
+The Vice President shall serve as a non-voting \textit{ex-officio member} of the Assembly and of any Assembly committee she shall elect.
+
+\subsubsection{Recommend Measures to the Assembly.}
+The Vice President may, jointly or severally with the President, recommend to the Assembly for its consideration such measures as they shall deem appropriate.
+
 
 \subsection{Treasurer.}
 The Treasurer will chair the Assembly in the absence of the President and Executive Vice President, prepare one budget for the Fall term and one budget for Winter/Spring/Summer terms in consultation with the other executive officers, committee, commission, and select commission chairs, the Administrative coordinator, and the MSA financial advisor. The Treasurer shall promptly disburse allocated funds with the assistance of the Administrative Coordinator, promptly respond to requests for budgetary information by MSA members The Treasurer shall make available any information concerning the budget or finance information of MSA available upon request to representatives and committee and commission chairs. The Front Office shall make available the Annual Budget to available upon request to any student. The Administrative Coordinator shall make available upon request any previously prepared financial information to any student. 
