--- a/executive.tex
+++ b/executive.tex
@@ -33,7 +33,7 @@ The President shall, prior to the end of each academic year, submit to the Assem
 The Vice President shall serve as president of the University Council, but shall have no vote, unless the Council shall be equally divided.
 
 \subsubsection{Non-voting Member of the Assembly.}
-The Vice President shall serve as a non-voting \textit{ex-officio member} of the Assembly and of any Assembly committee she shall elect.
+The Vice President shall serve as a non-voting \textit{ex-officio} member of the Assembly and of any Assembly committee she shall elect.
 
 \subsubsection{Recommend Measures to the Assembly.}
 The Vice President may, jointly or severally with the President, recommend to the Assembly for its consideration such measures as they shall deem appropriate.
