--- a/executive.tex
+++ b/executive.tex
@@ -40,7 +40,7 @@ The Vice President may, jointly or severally with the President, recommend to th
 
 
 \subsection{Treasurer.}
-The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in this Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting ex-officio member of any legislative body regarding student finance.
+The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in this Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting \textit{ex-officio} member of any legislative body regarding student finance.
 
 \subsection{Student General Counsel.}
 The Student General Counsel will chair the Assembly in the absence of the President, Executive Vice President and Treasurer, will serve as MSA counsel before student judiciaries with  full authority in representing MSA before such judiciaries, will serve as Parliamentarian of the Assembly, will assist MSA members who desire technical assistance in drafting or amending MSA legislation, will in consultation with legal experts report legal advice to the Assembly as needed, will review MSA legislation and motions for compliance with the Code and Constitution, and will be responsible for assessing absences to representatives and chairs as outlined in the Code and Constitution \todo{[maintain records of resolutions, agendas, minutes, other documents, etc.?]}.
