Updated SGC, Chief of Staff and CPO duties

--- a/executive.tex
+++ b/executive.tex
@@ -43,13 +43,13 @@ The Vice President may, jointly or severally with the President, recommend to th
 The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in this Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting \textit{ex-officio} member of any legislative body regarding student finance.
 
 \subsection{Student General Counsel.}
-The Student General Counsel will chair the Assembly in the absence of the President, Executive Vice President and Treasurer, will serve as MSA counsel before student judiciaries with  full authority in representing MSA before such judiciaries, will serve as Parliamentarian of the Assembly, will assist MSA members who desire technical assistance in drafting or amending MSA legislation, will in consultation with legal experts report legal advice to the Assembly as needed, will review MSA legislation and motions for compliance with the Code and Constitution, and will be responsible for assessing absences to representatives and chairs as outlined in the Code and Constitution \todo{[maintain records of resolutions, agendas, minutes, other documents, etc.?]}.
+The Student General Counsel shall be the chief representative of the Central Student Government in matters before student judiciaries. The Student General Counsel may retain up to three student representatives to serve as assistants in such matters. The Student General Counsel shall advise the Executive and the Legislature on the interpretation of the Constitution and the Compiled Code, and may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections of student government.
 
 \subsection{Chief-of-Staff.}
-The Chief-of-Staff will, work with the Administrative Coordinator to assign MSA officer space, prepare the agenda for Assembly meetings, maintain a record of the actions of the Assembly's committees and commissions, and assist the Executive Vice-President in the preparation of an MSA Mid-Year Report and MSA End-Year Report.
+The Chief-of-Staff shall oversee attendance and procedural policies at meetings of the Executive Committee and executive commission meetings. The Chief of Staff shall solicit and receive reports of the various organs of government, maintain and publish executive records, and ensure collaboration among the various executive commissions. The Chief of Staff may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections.
 
 \subsection{Chief Programming Officer.}
-
+The Chief Programming Officer shall serve as principal advisor to the President on matters of student programming, assist executive commissions in the long-range planning and execution of their mandate, and supervise the communications of the Central Student Government. The Chief Programming Officer may serve as a non-voting \textit{ex-officio} member of any legislative body concerning campus communication.
 
 \section{Commissions}
 
