--- a/executive.tex
+++ b/executive.tex
@@ -45,11 +45,12 @@ The Treasurer shall be the chief financial officer of MSA. The Treasurer and all
 \subsection{Student General Counsel.}
 The Student General Counsel shall be the chief representative of the Central Student Government in matters before student judiciaries. The Student General Counsel may retain up to three student representatives to serve as assistants in such matters. The Student General Counsel shall advise the Executive and the Legislature on the interpretation of the Constitution and the Compiled Code, and may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections of student government.
 
-\subsection{Chief-of-Staff.}
-The Chief-of-Staff shall oversee attendance and procedural policies at meetings of the Executive Committee and executive commission meetings. The Chief of Staff shall solicit and receive reports of the various organs of government, maintain and publish executive records, and ensure collaboration among the various executive commissions. The Chief of Staff may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections.
+\subsection{Chief of Staff.}
+The Chief of Staff shall oversee attendance and procedural policies at meetings of the Executive Committee and executive commission meetings. The Chief of Staff shall solicit and receive reports of the various organs of government, maintain and publish executive records, and ensure collaboration among the various executive commissions. The Chief of Staff may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections.
 
 \subsection{Chief Programming Officer.}
 The Chief Programming Officer shall serve as principal advisor to the President on matters of student programming, assist executive commissions in the long-range planning and execution of their mandate, and supervise the communications of the Central Student Government. The Chief Programming Officer may serve as a non-voting \textit{ex-officio} member of any legislative body concerning campus communication.
+
 
 \section{Commissions}
 
