Updated commission mandates

--- a/executive.tex
+++ b/executive.tex
@@ -6,14 +6,14 @@
 \subsubsection{Executive Power Vested in the President.}
 The President shall oversee and coordinate all MSA activities and be the chief spokesperson for MSA unless otherwise specified in the Code or Constitution.
 \subsubsection{Appointment powers.}
-	\subsubsubsection{Executive Committee.}
-    The President shall have the authority to appoint a Treasurer, Student General Counsel, Chief of Staff, and Chief Programming Officer to the Executive Committee, which shall advise the President on all pertinent matters. The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
-	\subsubsubsection{University-wide Committees.}
-	The President shall also appoint student representatives to university-wide committees.
-	\subsubsubsection{Confirmation.}
-	All Executive appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.
-	\subsubsubsection{Recall.}
-	The President may likewise recall these officers with a two-thirds majority vote of the Assembly. 
+\subsubsubsection{Executive Committee.}
+The President shall have the authority to appoint a Treasurer, Student General Counsel, Chief of Staff, and Chief Programming Officer to the Executive Committee, which shall advise the President on all pertinent matters. The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
+\subsubsubsection{University-wide Committees.}
+The President shall also appoint student representatives to university-wide committees.
+\subsubsubsection{Confirmation.}
+All Executive appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.
+\subsubsubsection{Recall.}
+The President may likewise recall these officers with a two-thirds majority vote of the Assembly. 
 	
 \subsubsection{Executive Commissions.}
 The President may appoint Executive Commissions to study issues on campus, publish reports concerning issues under such purview, and recommend to the Executive Branch such measures as they shall deem appropriate.
@@ -58,28 +58,21 @@ The Chief Programming Officer shall serve as principal advisor to the President 
 The Student Organization Funding Commission (``SOFC'') shall review applications for funding from student organizations, and shall submit student organization funding recommendations to the Assembly.
 
 \subsection{}
-The Community Service Commission (``CSC1'') shall 
-\subsubsection{}
-review applications for funding from student organizations engaged in direct community service, community development, and community organizing;
-\subsubsection{}
-submit community service student organization funding recommendations to the Assembly;
-\subsubsection{}
-provide financial and organizational training to community service student organizations;
-\subsubsection{}
-plan, promote, and sponsor events emphasizing the importance of community service to the University community.
+The Campus Governance Commission (``CGC'') shall assist the President in identifying candidates suitable for nomination to University-wide committees and facilitate communications between MSA and its appointees to University committee.
 
 \subsection{}
-The Campus Governance Commission (``CGC'') shall
+The External Relations Commission (``ERC'') shall
 \subsubsection{}
-nominate students to University committees;
+facilitate communication between MSA and individuals and organizations external to the University community;
 \subsubsection{}
-facilitate communications between MSA and its appointees to University committees;
+advocate on behalf of MSA and the student body before organizations external to the University community;
 \subsubsection{}
-maintain a list of committees to which MSA makes appointments;
+monitor local, state and national government actions concerning MSA and the University;
 \subsubsection{}
-maintain a list of students appointed to University committees;
+maintain contact with other college and university student governments and associations of student governments.
 \subsubsection{}
-shall collect mandatory reports from appointees that will be included in the end of semester MSA reports.
+Elect a liaison who shall attend Ann Arbor city council meetings and report back to the committee with any information he/she may find pertinent.
+
 
 \subsection{}
 The Communications Commissions (``Communications'') shall
@@ -96,29 +89,21 @@ be responsible for updating and administering the MSA website;
 \subsubsection{}
 facilitate MSA's presence during New Student Orientation and Welcome Week.
 \subsubsection{}
-carry out its duties in a fair and equitable manner to all constituents while refraining from promoting the Michigan Student Assembly as a body of bias
+carry out its duties in a fair and equitable manner to all constituents while refraining from promoting the Michigan Student Assembly as a body of bias.
+
 
 \subsection{}
-The External Relations Commission (``ERC'') shall
-\subsubsection{}
-facilitate communication between MSA and individuals and organizations external to the University community;
-\subsubsection{}
-advocate on behalf of MSA and the student body before organizations external to the University community;
-\subsubsection{}
-monitor local, state and national government actions concerning MSA and the University;
-\subsubsection{}
-maintain contact with other college and university student governments and associations of student governments.
-\subsubsection{}
-Elect a liaison who shall attend Ann Arbor city council meetings and report back to the committee with any information he/she may find pertinent.
+The Gender Issues Commission (``GIC'') shall strive to educate the university community on gender issues and shall monitor and work toward the improvement of student life for students of all genders on campus, including but not limited to lesbian, gay, bisexual and transgender students, and shall facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Lesbian, Gay, Bisexual \& Transgender Issues Commission (``LGBT'') shall monitor and work toward the improvement of student life for lesbian, gay, bisexual and transgender students, and shall facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Women's Issues Commission (``WIC'') shall monitor and work toward the improvement of student life for all women on campus, shall strive to educate the university community on women's issues and shall facilitate communication between relevant student organizations.
 
+
 \subsection{}
-The Minority Affairs Commission (``MAC'') shall monitor and work toward the improvement of student life for all African American, Asian and Pacific American, Latino, Latina, Latin American, Arab American and Native American students, shall strive to educate the university community on minority affairs, and shall facilitate communication between relevant student organizations.
+The Multicultural Affairs Commission (``MAC'') shall monitor and work toward the improvement of ethnic and cultural diversity in student life, shall strive to educate the university community on issues regarding underrepresented minorities on campus, and shall facilitate communication between relevant student organizations.
 
 \subsection{}
 The International Student Affairs Commission (``ISAC'') shall monitor and work toward the improvement of student life for all international students on campus, and facilitate communication between relevant student organizations.
